--- a/public/chat.html
+++ b/public/chat.html
@@ -38,7 +38,7 @@
   </footer>
 
   <script src="js/set-background.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
+  <script src="js/libs/socket.io.js"></script>
   <script src="/js/libs/jquery-3.1.0.min.js"></script>
   <script src="/js/chat.js"></script>
 
