Added Location feature

--- a/public/chat.html
+++ b/public/chat.html
@@ -23,7 +23,7 @@
     <ol id="messages"></ol>
     <br />
 
-    <h5>Write your message:</h5>
+    <h4>Write your message:</h4>
     <div class="input-group">
       <form id="message-form" role="form">
         <div class="form-group">
@@ -31,6 +31,9 @@
           <button class="btn btn-success">Send</button>
         </div>
       </form>
+      <div class="form-group">
+          <button class="btn btn-success" id="send-location">Send Location</button>
+      </div>
     </div>
   </div>
   <footer>
